--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,445 @@
-.form div{
-    margin: 10px 0px 0px 10px;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.form button{
-    margin: 30px 0px 0px 100px;
+body{
+    height: 2000px;
 }
 
-.gender-section p{
+.navbar{
+    overflow: hidden;
+    padding: 10px;
+    background: #f8f9fa;
+}
+.navbar ul{
+    float: left;
+    list-style: none;
+}
+
+
+.navbar ul li{
+    float: left;
+    margin-left: 10px;
+}
+ul .fa {
+    padding: 5px;
+    font-size: 16px;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  ul .fa:hover {
+    opacity: 0.7;
+  }
+  ul .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  ul .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  ul .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  ul .fa-instagram {
+    background: #ad3aa2;
+    color: white;
+  }
+  
+
+.navbar div.contact{
+    float: right;
+}
+
+.navbar div.contact span{
+    margin-right: 30px;
+}
+.navbar div.contact span i {
+    margin-right: 5px;
+    color: #999;
+}
+
+
+
+
+
+
+
+
+
+.second-nav{
+    position: absolute;
+    z-index: 1100;
+    background-color: transparent;
+    width: 100%;
+    height: 84px;
+    top: 60px;
+    left: 0;
+    padding-left: 100px;
+    box-shadow: 0 10px 15px rgba(25,25,25,.1);
+    transition: all 0.5s ease;
+}
+.second-nav .logo{
+    float: left;
+    margin-right: 160px;
+}
+.second-nav .logo img{
+    width: 130px;
+    height: 50px;
+}
+.second-nav ul{
+    float: left;
+    list-style: none;
+}
+.second-nav ul li{
+    float: left;
+    color: #ddd;
+    padding-top: 15px;
+    margin-left: 20px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all .2s linear;
+}
+.second-nav ul li a{
+    color: #ddd;
+   text-decoration: none;
+}
+
+
+.second-nav ul li:hover{
+    padding-bottom: 5px;
+    border-bottom: 1px solid #ddd;
+}
+.second-nav ul li.active{
+    padding-bottom: 5px;
+    border-bottom: 1px solid #ddd;
+}
+
+
+
+.second-nav > div{
+    float: left;
+    margin-left: 270px;
+}
+.second-nav > div i{
+    color: #ddd;
+    width: 50px;
+    padding: 0;
+    height: 50px;
+    border: 1px solid #988d8d;
+    border-radius: 50%;
+    line-height: 50px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.second-nav > div span.label{
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    line-height: 30px;
+    text-align: center;
+    position: absolute;
+    font-size: 20px;
+    background-color: #55ACEE;
+    /* margin-left: 10px; */
+}
+
+
+.banner{
+    background-image: url('../image/pexels-andrea-piacquadio-3775120.jpg');
+    min-height: 550px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.overlay{
+    background-color: rgba(0,0,0,0.4);
+    height: 550px;
+    color: #fff;
+
+}
+
+.banner h1{
+    font-size: 80px;
+    font-family: playfair display,serif;
+    font-weight: 700;
+    padding: 150px 0 20px 100px;
+
+}
+.banner p{
+    width: 523px;
+    padding-left: 100px;
+    font-size: 25px;
+    line-height: 1.5;
+    font-weight: 300;
+
+}
+
+
+
+
+
+
+.banner button{
+    background: #2577fd;
+    text-transform: capitalize;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: 400;
+    letter-spacing: 1px;
+    line-height: 0;
+    padding: 25px 44px;
+    border-radius: 25px;
+    margin-left: 100px;
+    margin-top: 20px;
+    transition: all .2s linear;
+}
+.banner button:hover{
+    background: #55ACEE;
+}
+
+
+
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+button {
+    color: #fff;
+    outline: medium;
+}
+
+a, .button {
+    -webkit-transition: all .3s ease-out 0s;
+    -moz-transition: all .3s ease-out 0s;
+    -ms-transition: all .3s ease-out 0s;
+    -o-transition: all .3s ease-out 0s;
+    transition: all .3s ease-out 0s;
+}
+
+.btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #00b1ff;
+    z-index: 1;
+    border-radius: 5px;
+    transition: transform .5s;
+    transition-timing-function: ease;
+    transform-origin: 0 0;
+    transition-timing-function: cubic-bezier(.5,1.6,.4,.7);
+    transform: scaleX(0);
+}
+
+
+
+
+#about{
+    height: 500px;
+}
+
+#some_product{
+    height: 500px;
+}
+
+#contact{
+    overflow: hidden;
+    margin-bottom: 50px;
+}
+
+#contact h2{
+    font-weight: 700;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 60px;
+}
+#contact h2:after{
+    content: "";
+    width: 10%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:10px;
+    display: block;
+    border-top: 1px solid #55acee;
+    
+}
+h2 span,h1 span,h3 span{
+    color: #55acee;
+}
+
+
+#contact .container > div{
+    float: left;
+    width: 48%;
+    color: #807d7d;
+}
+
+#contact .contact-box > div{
+    margin-bottom: 25px;
+    padding:10px;
+    border-radius: 5px;
+    border: 2px solid #eceaea;
+}
+
+#contact .contact-box > div i{
+    margin-right: 10px;
+}
+
+#contact img{
+    width: 100%;
+}
+
+
+
+/*   footer */
+.footer{
+    background-color: #222;
+    padding-bottom: 32px;
+    padding-top: 75px;
+    overflow: hidden;
+}
+.footer ul{
+    list-style: none;
+}
+.footer a{
+    text-decoration: none;
+}
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+.container > div{
+    float: left;
+    width: 23%;
+    margin-right: 2%;
+}
+.container > div.shop-img{
+    width: 24%;
+    margin-right: 0;
+}
+
+
+.container > div h3{
+    color: #ddd;
+    letter-spacing: 1px;
+    font-size: 25px;
     margin-bottom: 20px;
 }
+
+.container > div ul li{
+    color: #ddd;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+}
+.container > div ul li a{
+    transition: all .2s ease;
+}
+.container > div ul li a:hover{
+    color: #ddd;
+    padding-left: 10px;
+}
+.container > div ul li:after{
+    content: "";
+    width: 50%;
+    margin-top: 10px;
+    display: block;
+    border-bottom: 1px solid #4e4b4b;
+}
+.container > div ul li a{
+    color: #929090;
+}
+
+.get-text{
+    color: #848181;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+.icons-group i{
+    color: #ddd;
+    margin-right: 5px;
+}
+.icons-group i:hover{
+    opacity: .5;
+}
+.footerending:before{
+    content: "";
+    width: 30%;
+    margin:10px auto 25px auto;
+    display: block;
+    border-top: 1px solid #4e4b4b;
+}
+
+.overlay2{
+    background-color: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 182px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.shop-img{
+    position: relative;
+    overflow: hidden;
+    border: 1px solid #4e4b4b;
+    padding:2px;
+}
+.shop-img img{
+    width: 100%;
+    height: 180px;
+    display: block;
+    position: relative;
+}
+
+
+
+.footerending{
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+
+.footerending .Copyright{
+    margin-top: 10px;
+    color: #ddd;
+}
+
+.Copyright span{
+    color: #55ACEE;
+}
+
+
