--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,7 @@ ul .fa {
 .banner{
     background-image: url('../image/pexels-andrea-piacquadio-3775120.jpg');
     min-height: 550px;
+    background-attachment:fixed;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -265,25 +266,182 @@ a, .button {
 
 
 #about{
-    height: 500px;
+    padding-top: 50px;
+    margin-bottom: 50px;
 }
 
-#some_product{
-    height: 500px;
+.aboutpragraph{
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    color: #949494;
+    font-size: 18px;
+    margin-top: -30px;
 }
+.main-cat{
+    margin-top: 50px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+.main-cat > div{
+    float: left;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    width: 33%;
+    overflow: hidden;
+}
+.main-cat > div:before{
+    position: absolute;
+    z-index: 2;
+    display: block;
+    left: 55px;
+    top: 30px;
+    content: "";
+    opacity: 0.3;
+    width: 300px;
+    height: 120px !important;
+    border: 13px solid #55acee;
+    width: 100px;
+    transition: all 0.6s ease;
+}
+.main-cat > div img{
+    height: 200px;
+    filter: grayscale(100%);
+}
+
+.main-cat > div img:hover{
+    filter: grayscale(0);
+}
+
+.teammembers{
+    margin-top: 50px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+
+
+.teammembers > div{
+    width: 25%;
+    float: left;
+    text-align: center;
+}
+.teammembers > div h3{
+   color: #ada9a9;
+}
+.teammembers > div h5{
+    color: #7d7b7b;
+ }
+.teammembers > div img{
+    width: 250px;
+    border-radius: 10px;
+}
+.teammembers > div p{
+    margin-top: 5px;
+    font-size: 14px;
+}
+.teammembers > div p i{
+    margin-right: 5px;
+    opacity: 0.7;
+    cursor: pointer;
+}
+
+.teammembers > div p i.fa-facebook:hover{
+    opacity: 1;
+    color: #3B5998;
+}
+.teammembers > div p i.fa-twitter:hover{
+    opacity: 1;
+    color: #55ACEE;
+}
+.teammembers > div p i.fa-linkedin:hover{
+    opacity: 1;
+    color: #007bb5;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#some_product{
+    margin-top: 80px;
+    padding-top: 50px;
+    margin-bottom: 50px;
+}
+
+
+.sub-some{
+    overflow: hidden;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.sub-some > div{
+    float: left;
+    width: 500px;
+    line-height: 1.7;
+    color: gray;
+    font-weight: 400;
+    margin-left: 50px;
+}
+
+.sub-some .sub-some-img{
+    float: left;
+    width: 500px;
+    overflow: hidden;
+    
+    
+}
+.sub-some img{
+    width: 100%;
+    transition: all 1s ease;
+}
+
+
+
+.sub-some img:hover{
+    transform: scale(1.5);
+}
+
+
+
+
+
+
+
+
 
 #contact{
     overflow: hidden;
     margin-bottom: 50px;
+    margin-top: 80px;
 }
 
-#contact h2{
+#contact h2,#about h2,#leadership h2,#some_product h2{
     font-weight: 700;
     font-size: 50px;
+    color: #999;
     text-align: center;
     margin-bottom: 60px;
 }
-#contact h2:after{
+#contact h2:after,#about h2:after,#leadership h2:after,#some_product h2:after{
     content: "";
     width: 10%;
     text-align: left;
