--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    height: 2000px;
+   overflow-x: hidden;
 }
 
 .navbar{
@@ -599,5 +599,93 @@ h2 span,h1 span,h3 span{
 .Copyright span{
     color: #55ACEE;
 }
+/*
+///////////////////////////////
+//       Card Page           //
+///////////////////////////////
+*/
+
+.banner2{
+    background-image: url('../image/pexels-karolina-grabowska-5632402.jpg');
+    min-height: 350px;
+    background-attachment:fixed;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.overlay-card-panner{
+    background-color: rgba(0,0,0,0.4);
+    height: 350px;
+    color: #fff;
+}
+
+.card-list{
+    margin-top: 80px;
+    margin-bottom: 50px;
+}
 
 
+
+
+.card-table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+.card-table td, .card-table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+.card-table tr:nth-child(even){background-color: #f2f2f2;}
+.card-table tr:hover {background-color: #ddd;}
+.card-table th {
+padding-top: 12px;
+padding-bottom: 12px;
+background-color: #999;
+color: white;
+}
+
+
+.mybtn{
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: 400;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    color: white;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.mybtn:hover{
+    opacity: 0.8;
+}
+.btn-delete{
+    background-color: #d9534f;
+    padding: 6px 20px;
+}
+.btn-update{
+    background-color: #5bc0de;
+    padding: 6px 20px;
+}
+.upd{
+    margin-top: 10px;
+}
+
+.btn-green{
+    background-color: #5cb85c;
+    padding: 4px 20px;
+}
+
+.btn-red{
+    background-color: #d9534f;
+    padding: 4px 20px;
+}
+
+#quant-field{
+    height: 22px;
+}
