--- a/css/wish.css
+++ b/css/wish.css
@@ -7,10 +7,17 @@ body {
     margin-right: 5%;
 }
 
+#cardContainer{
+    margin-top: 50px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .card {
     box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 23%;
+    width: 30%;
     margin-top: 7%;
     padding-bottom: 20px;
     margin-bottom: 3%;
