--- a/css/style.css
+++ b/css/style.css
@@ -66,14 +66,7 @@ ul .fa {
     color: #999;
 }
 
-
-
-
-
-
-
-
-
+/* second Nav bar */
 .second-nav{
     position: absolute;
     z-index: 1100;
@@ -122,37 +115,49 @@ ul .fa {
     border-bottom: 1px solid #ddd;
 }
 
-
+/* WishList & Cart buttons */
 
 .second-nav > div{
-    float: left;
-    margin-left: 270px;
+    position: relative;
 }
+.second-nav > div > :nth-child(1) {
+    position: absolute;
+    right: 150px;
+}
+
+.second-nav > div > :nth-child(2) {
+    position: absolute;
+    right: 230px;
+}
+
+
 .second-nav > div i{
     color: #ddd;
     width: 50px;
-    padding: 0;
     height: 50px;
     border: 1px solid #988d8d;
     border-radius: 50%;
+    
     line-height: 50px;
-    cursor: pointer;
     text-align: center;
-    font-size: 20px;
-    margin-left: 20px;
+    font-size: 20px;    
+    
 }
 
-.second-nav > div span.label{
+.second-nav > div span{
     color: #fff;
+    background-color: #55ACEE;
     width: 30px;
     height: 30px;
     border-radius: 50%;
+    
     line-height: 30px;
     text-align: center;
-    position: absolute;
     font-size: 20px;
-    background-color: #55ACEE;
-    /* margin-left: 10px; */
+    
+    position: absolute;
+    left: 37px;
+    top: -5px;
 }
 
 
